[tool.poetry]
name = "uc3-sceptre-utils"
version = "0.1.0"
readme = "README.md"
homepage = "htps:/github.com/CDLUC3/uc3-sceptre-utils.git"
authors = ["Ashley Gould <agould@ucop.edu>"]
description = "Custom hooks and resolvers for use with sceptre"

[tool.poetry.dependencies]
python = "^3.11"
sceptre = "^4.4.2"
sceptre-ssm-resolver = "^1.2.2"
yq = "^3.4.3"

# need to extract resolvers, hooks from setup.py with this syntax
[tool.poetry.plugins."sceptre.hooks"]
"account_verifier" = "uc3_sceptre_utils.hooks.account_verifier:AccountVerifier"

[tool.poetry.plugins."sceptre.resolvers"]
"hosted_zone_id" = "uc3_sceptre_utils.resolvers.hosted_zone_id:HostedZoneId"
"securitygroup_id_by_name" = "uc3_sceptre_utils.resolvers.secritygroup_id_by_name:SecurityGroupIdByName"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
